level-0/k8s-deployment/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: challenge-zero
  labels:
    name: challenge-zero
