level-0/k8s-deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: challenge-zero-service
  namespace: challenge-zero
  labels:
    app: challenge-zero
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: challenge-zero
