level-0/k8s-deployment/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: challenge-zero-ingress
  namespace: challenge-zero
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/whitelist-source-range: ""
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - bowsercorpc2.silicon-ctf.party
    secretName: tls-secret
  rules:
  - host: bowsercorpc2.silicon-ctf.party
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: challenge-zero-service
            port: 
              number: 80
